[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["Ilya Sachkov <sos31337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
